# VoiceSummary

./: .env.example  .gitignore  README.md  pyproject.toml
src/: .env.examples  main.py
src/llm/: __init__.py  llm_module.py  template_manager.py
src/prompts/: system.txt
src/prompts/templates/: en.txt  fr.txt  ja.txt  ko.txt  zh.txt
src/voice/: __init__.py  voice_module.py
