[project]
name = "voicesummary"
version = "0.1.0"
description = "LLM based voice summary tool"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hf-xet>=1.2.0",
    "python-dotenv>=1.2.1",
    "whisperx",
]

[tool.uv.sources]
whisperx = { git = "https://github.com/m-bain/whisperX.git" }
